Finished Login Face

--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -15,9 +15,21 @@
   <body>
     <section class="login">
       <div class="container center">
-        <div class="cardLogin center">
+        <div class="cardLogin">
           <i class="fa-regular fa-user"></i>
-          
+          <div class="msgError">msg</div>
+          <div class="form-group">
+            <label for="formLabel" id="userLabel">Usuário</label>
+            <input type="text" id="usuario" />
+          </div>
+          <div class="form-group">
+            <label for="formLabel" id="senhaLabel">Senha</label>
+            <input type="password" id="senha" />
+          </div>
+          <p>
+            Não tem uma conta?
+            <button>Cadastre-se</button>
+          </p>
         </div>
         <div class="btn"><button>Entrar</button></div>
       </div>
