Login Javascript Settings Completed

--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -6,6 +6,8 @@
     <title>Home Screen</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../css/global.css" />
+    <!-- Javascript -->
+    <script src="../js/signin.js" defer></script>
     <!-- Icons -->
     <link
       rel="stylesheet"
@@ -25,6 +27,7 @@
           <div class="form-group">
             <label for="formLabel" id="senhaLabel">Senha</label>
             <input type="password" id="senha" />
+            <i class="fa fa-eye" aria-hidden="true"></i>
           </div>
           <p>
             Não tem uma conta?
