--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -37,5 +37,36 @@
         <div class="btn"><button>Entrar</button></div>
       </div>
     </section>
+    <section class="signup">
+      <div class="container center">
+        <div class="cardSignup">
+          <div class="header-card">
+            <h1 class="title-card">Cadastro</h1>
+            <span class="modal-fechar center" onclick="fecharModal()">X</span>
+          </div>
+          <div id="msgError">Error</div>
+          <div id="msgSuccess">Success</div>
+          <div class="form-group card1">
+            <label for="formLabel" id="nomeLabel">Nome</label>
+            <input type="text" id="nome" />
+          </div>
+          <div class="form-group">
+            <label for="formLabel" id="LabelUser">Usuário</label>
+            <input type="text" id="user" />
+          </div>
+          <div class="form-group">
+            <label for="formLabel" id="senhaLabel">Senha</label>
+            <input type="password" id="senha" />
+            <i class="fa fa-eye" aria-hidden="true"></i>
+          </div>
+          <div class="form-group">
+            <label for="formLabel" id="ConfSenhaLabel">Confirma Senha</label>
+            <input type="password" id="ConfSenha" />
+            <i class="fa fa-eye" aria-hidden="true"></i>
+          </div>
+        </div>
+        <div class="btn"><button>Cadastrar</button></div>
+      </div>
+    </section>
   </body>
 </html>
